src/parser/pgnParser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { pgn: peg$parsepgn },
      peg$startRuleFunction  = peg$parsepgn,

      peg$c0 = function(pw, all) { var arr = (all ? all : []); arr.unshift(pw);return arr; },
      peg$c1 = function(pb, all) { var arr = (all ? all : []); arr.unshift(pb); return arr; },
      peg$c2 = function() { return [[]]; },
      peg$c3 = function(pw) { return pw; },
      peg$c4 = function(pb) { return pb; },
      peg$c5 = function(cm, mn, cb, hm, nag, ca, vari, all) { var arr = (all ? all : []);
            var move = {}; move.turn = 'w'; move.moveNumber = mn;
            move.notation = hm; move.commentBefore = cb; move.commentAfter = ca; move.commentMove = cm;
            move.variations = (vari ? vari : []); move.nag = (nag ? nag : null); arr.unshift(move); return arr; },
      peg$c6 = function() { return ["endGameResult"]; },
      peg$c7 = function(cm, me, cb, hm, nag, ca, vari, all) { var arr = (all ? all : []);
            var move = {}; move.turn = 'b'; move.moveNumber = me;
            move.notation = hm; move.commentBefore = cb; move.commentAfter = ca;
            move.variations = (vari ? vari : []); arr.unshift(move); move.nag = (nag ? nag : null); return arr; },
      peg$c8 = "1:0",
      peg$c9 = peg$literalExpectation("1:0", false),
      peg$c10 = function() { return ["1:0"]; },
      peg$c11 = "0:1",
      peg$c12 = peg$literalExpectation("0:1", false),
      peg$c13 = function() { return ["0:1"]; },
      peg$c14 = "1-0",
      peg$c15 = peg$literalExpectation("1-0", false),
      peg$c16 = function() { return ["1-0"]; },
      peg$c17 = "0-1",
      peg$c18 = peg$literalExpectation("0-1", false),
      peg$c19 = function() { return ["0-1"]; },
      peg$c20 = "1/2-1/2",
      peg$c21 = peg$literalExpectation("1/2-1/2", false),
      peg$c22 = function() { return ["1/2-1/2"]; },
      peg$c23 = "*",
      peg$c24 = peg$literalExpectation("*", false),
      peg$c25 = function() { return ["*"]; },
      peg$c26 = function(sc, cm) {
            if (sc) {
              return {
                text: cm.trim(),
                csl: sc.csl || null,
                cal: sc.cal || null
              };
            } else {
              return {
                text: cm.trim(),
                csl: null,
                cal: null
              };
            }
          },
      peg$c27 = /^[^{}]/,
      peg$c28 = peg$classExpectation(["{", "}"], true, false),
      peg$c29 = function(t) { return t.join(""); },
      peg$c30 = function(specials) { 
            var result = { csl: null, cal: null };
            for (var i=0; i<specials.length; i++) {
              var sc = specials[i][0];
              if (sc.type === 'csl') {
                result.csl = sc.value;
              } else if (sc.type === 'cal') {
                result.cal = sc.value;
              }
            }
            return result;
          },
      peg$c31 = "[",
      peg$c32 = peg$literalExpectation("[", false),
      peg$c33 = "%csl",
      peg$c34 = peg$literalExpectation("%csl", false),
      peg$c35 = "]",
      peg$c36 = peg$literalExpectation("]", false),
      peg$c37 = function(squares) { return { type: 'csl', value: squares }; },
      peg$c38 = "%cal",
      peg$c39 = peg$literalExpectation("%cal", false),
      peg$c40 = function(moves) { return { type: 'cal', value: moves }; },
      peg$c41 = ",",
      peg$c42 = peg$literalExpectation(",", false),
      peg$c43 = function(first, rest) {
            var list = [first];
            for (var i=0; i<rest.length; i++) { list.push(rest[i][1]); }
            return list;
          },
      peg$c44 = function(color, square) { 
            return { color: color || null, square: square }; 
          },
      peg$c45 = /^[RGB]/,
      peg$c46 = peg$classExpectation(["R", "G", "B"], false, false),
      peg$c47 = function(color, fromCol, fromRow, toCol, toRow) {
            return { color: color || null, from: fromCol + fromRow, to: toCol + toRow };
          },
      peg$c48 = function(column, row) { return column + row; },
      peg$c49 = "{",
      peg$c50 = peg$literalExpectation("{", false),
      peg$c51 = "}",
      peg$c52 = peg$literalExpectation("}", false),
      peg$c53 = function(vari, all, me) { var arr = (all ? all : []); arr.unshift(vari); return arr; },
      peg$c54 = function(vari, all) { var arr = (all ? all : []); arr.unshift(vari); return arr; },
      peg$c55 = "(",
      peg$c56 = peg$literalExpectation("(", false),
      peg$c57 = ")",
      peg$c58 = peg$literalExpectation(")", false),
      peg$c59 = ".",
      peg$c60 = peg$literalExpectation(".", false),
      peg$c61 = function(num) { return num; },
      peg$c62 = peg$otherExpectation("integer"),
      peg$c63 = /^[0-9]/,
      peg$c64 = peg$classExpectation([["0", "9"]], false, false),
      peg$c65 = function(digits) { return makeInteger(digits); },
      peg$c66 = /^[ \t\n\r]/,
      peg$c67 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c68 = function() { return ''; },
      peg$c69 = "--",
      peg$c70 = peg$literalExpectation("--", false),
      peg$c71 = function() { var hm = {}; hm.notation = '--'; return hm; },
      peg$c72 = "Z0",
      peg$c73 = peg$literalExpectation("Z0", false),
      peg$c74 = function(fig, disc, str, col, row, pr, ch) { var hm = {}; hm.fig = (fig ? fig : null); hm.disc =  (disc ? disc : null); hm.strike = (str ? str : null); hm.col = col; hm.row = row; hm.check = (ch ? ch : null); hm.promotion = pr; hm.notation = (fig ? fig : "") + (disc ? disc : "") + (str ? str : "") + col + row + (pr ? pr : "") + (ch ? ch : ""); return hm; },
      peg$c75 = function(fig, cols, rows, str, col, row, pr, ch) { var hm = {}; hm.fig = (fig ? fig : null); hm.strike = (str =='x' ? str : null); hm.col = col; hm.row = row; hm.check = (ch ? ch : null); hm.notation = (fig && (fig!=='P') ? fig : "") + cols + rows + (str=='x' ? str : "-") + col  + row + (pr ? pr : "") + (ch ? ch : ""); hm.promotion = pr; return hm; },
      peg$c76 = function(fig, str, col, row, pr, ch) { var hm = {}; hm.fig = (fig ? fig : null); hm.strike = (str ? str : null); hm.col = col; hm.row = row; hm.check = (ch ? ch : null); hm.notation = (fig ? fig : "") + (str ? str : "") + col  + row + (pr ? pr : "") + (ch ? ch : ""); hm.promotion = pr; return hm; },
      peg$c77 = "O-O-O",
      peg$c78 = peg$literalExpectation("O-O-O", false),
      peg$c79 = function(ch) { var hm = {}; hm.notation = 'O-O-O'+ (ch ? ch : ""); hm.check = (ch ? ch : null); return  hm; },
      peg$c80 = "O-O",
      peg$c81 = peg$literalExpectation("O-O", false),
      peg$c82 = function(ch) { var hm = {}; hm.notation = 'O-O'+ (ch ? ch : ""); hm.check = (ch ? ch : null); return  hm; },
      peg$c83 = "+-",
      peg$c84 = peg$literalExpectation("+-", false),
      peg$c85 = "+",
      peg$c86 = peg$literalExpectation("+", false),
      peg$c87 = function(ch) { return ch[1]; },
      peg$c88 = "$$$",
      peg$c89 = peg$literalExpectation("$$$", false),
      peg$c90 = "#",
      peg$c91 = peg$literalExpectation("#", false),
      peg$c92 = "=",
      peg$c93 = peg$literalExpectation("=", false),
      peg$c94 = function(f) { return '=' + f; },
      peg$c95 = function(nag, nags) { var arr = (nags ? nags : []); arr.unshift(nag); return arr; },
      peg$c96 = "$",
      peg$c97 = peg$literalExpectation("$", false),
      peg$c98 = function(num) { return '$' + num; },
      peg$c99 = "!!",
      peg$c100 = peg$literalExpectation("!!", false),
      peg$c101 = function() { return '$3'; },
      peg$c102 = "??",
      peg$c103 = peg$literalExpectation("??", false),
      peg$c104 = function() { return '$4'; },
      peg$c105 = "!?",
      peg$c106 = peg$literalExpectation("!?", false),
      peg$c107 = function() { return '$5'; },
      peg$c108 = "?!",
      peg$c109 = peg$literalExpectation("?!", false),
      peg$c110 = function() { return '$6'; },
      peg$c111 = "!",
      peg$c112 = peg$literalExpectation("!", false),
      peg$c113 = function() { return '$1'; },
      peg$c114 = "?",
      peg$c115 = peg$literalExpectation("?", false),
      peg$c116 = function() { return '$2'; },
      peg$c117 = "\u203C",
      peg$c118 = peg$literalExpectation("\u203C", false),
      peg$c119 = "\u2047",
      peg$c120 = peg$literalExpectation("\u2047", false),
      peg$c121 = "\u2049",
      peg$c122 = peg$literalExpectation("\u2049", false),
      peg$c123 = "\u2048",
      peg$c124 = peg$literalExpectation("\u2048", false),
      peg$c125 = "\u25A1",
      peg$c126 = peg$literalExpectation("\u25A1", false),
      peg$c127 = function() { return '$7'; },
      peg$c128 = function() { return '$10'; },
      peg$c129 = "\u221E",
      peg$c130 = peg$literalExpectation("\u221E", false),
      peg$c131 = function() { return '$13'; },
      peg$c132 = "\u2A72",
      peg$c133 = peg$literalExpectation("\u2A72", false),
      peg$c134 = function() { return '$14'; },
      peg$c135 = "\u2A71",
      peg$c136 = peg$literalExpectation("\u2A71", false),
      peg$c137 = function() { return '$15';},
      peg$c138 = "\xB1",
      peg$c139 = peg$literalExpectation("\xB1", false),
      peg$c140 = function() { return '$16';},
      peg$c141 = "\u2213",
      peg$c142 = peg$literalExpectation("\u2213", false),
      peg$c143 = function() { return '$17';},
      peg$c144 = function() { return '$18';},
      peg$c145 = "-+",
      peg$c146 = peg$literalExpectation("-+", false),
      peg$c147 = function() { return '$19';},
      peg$c148 = "\u2A00",
      peg$c149 = peg$literalExpectation("\u2A00", false),
      peg$c150 = function() { return '$22'; },
      peg$c151 = "\u27F3",
      peg$c152 = peg$literalExpectation("\u27F3", false),
      peg$c153 = function() { return '$32'; },
      peg$c154 = "\u2192",
      peg$c155 = peg$literalExpectation("\u2192", false),
      peg$c156 = function() { return '$36'; },
      peg$c157 = "\u2191",
      peg$c158 = peg$literalExpectation("\u2191", false),
      peg$c159 = function() { return '$40'; },
      peg$c160 = "\u21C6",
      peg$c161 = peg$literalExpectation("\u21C6", false),
      peg$c162 = function() { return '$132'; },
      peg$c163 = "D",
      peg$c164 = peg$literalExpectation("D", false),
      peg$c165 = function() { return '$220'; },
      peg$c166 = /^[RNBQKP]/,
      peg$c167 = peg$classExpectation(["R", "N", "B", "Q", "K", "P"], false, false),
      peg$c168 = /^[a-h]/,
      peg$c169 = peg$classExpectation([["a", "h"]], false, false),
      peg$c170 = /^[1-8]/,
      peg$c171 = peg$classExpectation([["1", "8"]], false, false),
      peg$c172 = "x",
      peg$c173 = peg$literalExpectation("x", false),
      peg$c174 = "-",
      peg$c175 = peg$literalExpectation("-", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsepgn() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsepgnStartWhite();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsepgnBlack();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsepgnStartBlack();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsepgnWhite();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsewhiteSpace();
        if (s1 === peg$FAILED) {
          s1 = null;
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2();
        }
        s0 = s1;
      }
    }

    return s0;
  }

  function peg$parsepgnStartWhite() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsepgnWhite();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c3(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsepgnStartBlack() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsepgnBlack();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c4(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsepgnWhite() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;

    s0 = peg$currPos;
    s1 = peg$parsewhiteSpace();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsecomment();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsewhiteSpace();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsemoveNumber();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsewhiteSpace();
            if (s5 === peg$FAILED) {
              s5 = null;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parsecomment();
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parsewhiteSpace();
                if (s7 === peg$FAILED) {
                  s7 = null;
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parsehalfMove();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parsewhiteSpace();
                    if (s9 === peg$FAILED) {
                      s9 = null;
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parsenags();
                      if (s10 === peg$FAILED) {
                        s10 = null;
                      }
                      if (s10 !== peg$FAILED) {
                        s11 = peg$parsewhiteSpace();
                        if (s11 === peg$FAILED) {
                          s11 = null;
                        }
                        if (s11 !== peg$FAILED) {
                          s12 = peg$parsecomment();
                          if (s12 === peg$FAILED) {
                            s12 = null;
                          }
                          if (s12 !== peg$FAILED) {
                            s13 = peg$parsewhiteSpace();
                            if (s13 === peg$FAILED) {
                              s13 = null;
                            }
                            if (s13 !== peg$FAILED) {
                              s14 = peg$parsevariationWhite();
                              if (s14 === peg$FAILED) {
                                s14 = null;
                              }
                              if (s14 !== peg$FAILED) {
                                s15 = peg$parsepgnBlack();
                                if (s15 === peg$FAILED) {
                                  s15 = null;
                                }
                                if (s15 !== peg$FAILED) {
                                  peg$savedPos = s0;
                                  s1 = peg$c5(s2, s4, s6, s8, s10, s12, s14, s15);
                                  s0 = s1;
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseendGame();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsewhiteSpace();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c6();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parsepgnBlack() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;
